Add source json file

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,17 +1,20 @@
-1. Replace source vs regenerate cards
+1. Add meaning of card beneath cards
+2. Build AI prompt based on meanings of cards and the "plot"
+    associated with the particular spread
+3. Replace source vs regenerate cards
     - Add 3 blank images in index setup
     - reset: assign src to base card (or selection)
     - draw: assign src based on selection
-2. Select layout
+4. Select layout
     - Radio buttons at the top to pick the layout
 	    - start with 1 and 3, default 3
     - Use flex to put number of divs in the middle of the page
     - Put the position name in the middle of the div
-3. Tap card to turn over
+5. Tap card to turn over
     - draw: populates blank square with card back
     - click turns over the card
     - position name moves to bottom
-4. Add animation
+6. Add animation
     - cards move into position from deck at bottom
     - cards rotate over
 
